--- a/Módulo 1 - Primeros pasos/Modulo1Katas.ipynb
+++ b/Módulo 1 - Primeros pasos/Modulo1Katas.ipynb
@@ -21,13 +21,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Today's date is:  2022-02-13\n"
+          ]
+        }
+      ],
       "source": [
         "from datetime import date\n",
+        "#Agregamos  una variable\n",
+        "today=date.today()\n",
         "\n",
-        "print(\"Today's date is: \")"
+        "print(\"Today's date is: \", today)"
       ]
     },
     {
@@ -113,13 +123,16 @@
     }
   ],
   "metadata": {
+    "interpreter": {
+      "hash": "e922dd073470bdcc017ae3abd31d6491d6ed7bf31c1d559806e5511bfea88b81"
+    },
     "kernel_info": {
       "name": "conda-env-py37_default-py"
     },
     "kernelspec": {
       "display_name": "py37_default",
       "language": "python",
-      "name": "conda-env-py37_default-py"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -131,7 +144,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.9"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
