--- a/Módulo 1 - Primeros pasos/Modulo1 - Primeros pasos.ipynb
+++ b/Módulo 1 - Primeros pasos/Modulo1 - Primeros pasos.ipynb
@@ -67,11 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola\n"
+     ]
+    }
+   ],
    "source": [
-    "# Impresión en pantalla print('Hola desde la consola')\n"
+    "# Impresión en pantalla print('Hola desde la consola')\n",
+    "print (\"Hola\")"
    ]
   },
   {
@@ -95,11 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Tu turno, prueba el fragmento de código anterior\n"
+    "# Tu turno, prueba el fragmento de código anterior\n",
+    "sum = 1 + 2 # 3\n",
+    "product = sum * 2\n",
+    "print (product)"
    ]
   },
   {
@@ -141,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +170,7 @@
        "float"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-01-31\n"
+      "2022-02-22\n"
      ]
     }
    ],
@@ -297,11 +317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today's date is: 2022-02-22\n"
+     ]
+    }
+   ],
    "source": [
-    "# Tu turno ejecuta el siguiente comando: print(\"Today's date is: \" + str(date.today()))"
+    "# Tu turno ejecuta el siguiente comando: print(\"Today's date is: \" + str(date.today()))\n",
+    "print(\"Today's date is: \" + str(date.today()))"
    ]
   },
   {
@@ -326,11 +355,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenido al programa de bienvenida\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tu código aquí"
+    "# Escribe tu código aquí\n",
+    "print(\"Bienvenido al programa de bienvenida\")\n",
+    "name = input(\"alexis\")\n",
+    "print(\"Saludos: \" + name)"
    ]
   },
   {
@@ -436,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
