--- a/Módulo 1 - Primeros pasos/Modulo1 - Primeros pasos.ipynb
+++ b/Módulo 1 - Primeros pasos/Modulo1 - Primeros pasos.ipynb
@@ -355,14 +355,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bienvenido al programa de bienvenida\n"
+      "Bienvenido al programa de bienvenida\n",
+      "Saludos: \n"
      ]
     }
    ],
@@ -399,11 +400,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculadora\n",
+      "36\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tu código aquí"
+    "# Escribe tu código aquí\n",
+    "print (\"Calculadora\")\n",
+    "first_number = input (\"primerN : \")\n",
+    "second_number = input (\"numeroDos: \")\n",
+    "print(first_number + second_number)"
    ]
   },
   {
@@ -428,11 +442,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tu código aquí"
+    "# Escribe tu código aquí\n",
+    "print (\"Calculadora\")\n",
+    "first_number = input (\"primerN : \")\n",
+    "second_number = input (\"numeroDos: \")\n",
+    "print(int(first_number) + int(second_number))"
    ]
   },
   {
