--- a/Módulo 1 - Primeros pasos/Modulo1Katas.ipynb
+++ b/Módulo 1 - Primeros pasos/Modulo1Katas.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Today's date is:  2022-02-13\n"
+            "Today's date is:  2022-02-22\n"
           ]
         }
       ],
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -94,9 +94,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Today's date is: 2022-02-22\n"
+          ]
+        }
+      ],
       "source": [
         "from datetime import date\n",
         "\n",
@@ -105,9 +113,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "11 parsec, is 35.877159999999996 lightyears\n"
+          ]
+        }
+      ],
       "source": [
         "parsec = 11\n",
         "lightyears = 3.26156 * parsec\n",
