--- a/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
+++ b/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
@@ -41,13 +41,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No pasa nada\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false."
+        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
+        "asteroide = 1\n",
+        "if asteroide > 25:\n",
+        "    print('Alerta, asteroide cerca ')\n",
+        "else:\n",
+        "    print('No pasa nada')"
       ]
     },
     {
@@ -59,13 +72,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "rayo de luz\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
-        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False"
+        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False\n",
+        "asteroide = 21\n",
+        "if asteroide > 20:\n",
+        "    print('rayo de luz')\n",
+        "elif asteroide == 20:\n",
+        "    print('veo una luz')\n",
+        "else:\n",
+        "    print('¡Nada que ver aquí!')"
       ]
     },
     {
@@ -99,13 +127,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Nada:)\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
-        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra."
+        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra.\n",
+        "velocidadA = 0\n",
+        "asteroide = 0\n",
+        "if velocidadA > 25 and asteroide > 25:\n",
+        "    print('hay caramba =(')\n",
+        "elif velocidadA >= 20:\n",
+        "    print('eso es una luz?')\n",
+        "elif asteroide < 25:\n",
+        "    print('Nada :)')\n",
+        "else:\n",
+        "    print(':)')"
       ]
     },
     {
@@ -231,7 +277,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
