--- a/Módulo 4 - Cadenas/Módulo4Katas.ipynb
+++ b/Módulo 4 - Cadenas/Módulo4Katas.ipynb
@@ -37,11 +37,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['Interesting facts about the Moon',\n",
+              " \"The Moon is Earth's only satellite\",\n",
+              " 'There are several interesting facts about the Moon and how it affects life here on Earth',\n",
+              " '\\nOn average, the Moon moves 4cm away from the Earth every year',\n",
+              " 'This yearly drift is not significant enough to cause immediate effects on Earth',\n",
+              " 'The highest daylight temperature of the Moon is 127 C.']"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Añade el código necesario"
+        "# Añade el código necesario\n",
+        "text = \"\"\"Interesting facts about the Moon. The Moon is Earth's only satellite. There are several interesting facts about the Moon and how it affects life here on Earth. \n",
+        "On average, the Moon moves 4cm away from the Earth every year. This yearly drift is not significant enough to cause immediate effects on Earth. The highest daylight temperature of the Moon is 127 C.\"\"\"\n",
+        "partes= text.split('. ')\n",
+        "partes"
       ]
     },
     {
@@ -53,11 +73,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Define las palabras pista: average, temperature y distance suenan bien"
+        "# Define las palabras pista: average, temperature y distance suenan bien\n",
+        "key_words = [\"average\", \"temperature\", \"distance\"]"
       ]
     },
     {
@@ -69,11 +90,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            "The highest daylight temperature of the Moon is 127 C.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo for para recorrer la cadena"
+        "# Ciclo for para recorrer la cadena\n",
+        "for arm in partes:\n",
+        "    for palabras in key_words:\n",
+        "        if palabras in arm:\n",
+        "            print(arm)\n",
+        "            break"
       ]
     },
     {
@@ -85,11 +121,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            "The highest daylight temperature of the Moon is 127 Celsius.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo para cambiar C a Celsius"
+        "# Ciclo para cambiar C a Celsius\n",
+        "for arm in partes:\n",
+        "    for palabras in key_words:\n",
+        "        if palabras in arm:\n",
+        "            print(arm.replace(' C', ' Celsius'))\n",
+        "            break"
       ]
     },
     {
@@ -438,7 +489,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
