--- a/Módulo 4 - Cadenas/Módulo4Katas.ipynb
+++ b/Módulo 4 - Cadenas/Módulo4Katas.ipynb
@@ -172,14 +172,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Datos con los que vas a trabajar\n",
-        "name = \"Moon\"\n",
-        "gravity = 0.00162 # in kms\n",
-        "planet = \"Earth\""
+        "planeta = 'Marte '\n",
+        "gravedad  = 0.00143\n",
+        "nombre = 'Ganímedes'"
       ]
     },
     {
@@ -191,11 +191,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos el título"
+        "# Creamos el título\n",
+        "title = f'datos de gravedad sobre {nombre}'"
       ]
     },
     {
@@ -207,11 +208,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos la plantilla"
+        "# Creamos la plantilla\n",
+        "hechos = f\"\"\"{'-'*80} \n",
+        "Nombre del planeta: {planeta} \n",
+        "Gravedad en {nombre}: {gravedad * 1000} m/s2 \n",
+        "\"\"\""
       ]
     },
     {
@@ -223,11 +228,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Marte  \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Unión de ambas cadenas"
+        "# Unión de ambas cadenas\n",
+        "template = f\"\"\"{title.title()} \n",
+        "{hechos} \n",
+        "\"\"\" \n",
+        "print(hechos)"
       ]
     },
     {
@@ -246,12 +266,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------------------------------------------------------------------- \n",
+            "Nombre del planeta: Marte  \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2 \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Comprueba la plantilla\n",
-        "# print(nombre_plantilla)"
+        "print(hechos)"
       ]
     },
     {
@@ -263,11 +294,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Datos de Gravedad sobre: Ganímedes\n",
+            "-------------------------------------------------------------------------------\n",
+            "Nombre del planeta: Marte \n",
+            "Gravedad en Ganímedes: 0.00143 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Nueva plantilla"
+        "# Nueva plantilla\n",
+        "ntemplate = \"\"\"\n",
+        "Datos de Gravedad sobre: {nombre}\n",
+        "-------------------------------------------------------------------------------\n",
+        "Nombre del planeta: {planeta}\n",
+        "Gravedad en {nombre}: {gravedad} m/s2\n",
+        "\"\"\"\n",
+        "print(ntemplate.format(nombre=nombre, planeta=planeta, gravedad=gravedad))"
       ]
     },
     {
