--- a/Módulo 4 - Cadenas/Módulo4Katas.ipynb
+++ b/Módulo 4 - Cadenas/Módulo4Katas.ipynb
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -330,11 +330,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Datos de Gravedad sobre: Ganímedes\n",
+            "-------------------------------------------------------------------------------\n",
+            "Nombre del planeta: Marte \n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Pista: print(nueva_plantilla.format(variables))"
+        "# Pista: print(nueva_plantilla.format(variables))\n",
+        "print(ntemplate.format(nombre=nombre, planeta=planeta, gravedad=gravedad*1000))"
       ]
     },
     {
