--- a/Módulo 5 - Usar operaciones matemáticas/Módulo5Katas.ipynb
+++ b/Módulo 5 - Usar operaciones matemáticas/Módulo5Katas.ipynb
@@ -24,12 +24,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Crear variables para almacenar las dos distancias\n",
-        "# ¡Asegúrate de quitar las comas!"
+        "# ¡Asegúrate de quitar las comas!\n",
+        "planeta1 = 149597870\n",
+        "planeta2 = 778547200"
       ]
     },
     {
@@ -43,11 +45,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "628949330\n",
+            "390577533.93\n"
+          ]
+        }
+      ],
       "source": [
-        "# Calcular la distancia entre planetas"
+        "# Calcular la distancia entre planetas\n",
+        "km = planeta2 - planeta1\n",
+        "print(km)\n",
+        "\n",
+        "millas = km * 0.621\n",
+        "print(millas)"
       ]
     },
     {
@@ -90,12 +106,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Almacenar las entradas del usuario\n",
-        "#Pista: variable = input(\"¿Cuál es tu nombre?\")"
+        "#Pista: variable = input(\"¿Cuál es tu nombre?\")\n",
+        "planeta1 = input('distancia del sol para planeta1')\n",
+        "planeta2 = input('distancia del sol para el planeta2')"
       ]
     },
     {
@@ -108,11 +126,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Convierte las cadenas de ambos planetas a números enteros"
+        "# Convierte las cadenas de ambos planetas a números enteros\n",
+        "planeta1 = int(planeta1)\n",
+        "planeta2 = int(planeta2)"
       ]
     },
     {
@@ -126,14 +146,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "13433332201\n",
+            "8342099296.821\n"
+          ]
+        }
+      ],
       "source": [
         "# Realizar el cálculo y determinar el valor absoluto\n",
+        "# Realizar el cálculo y determinar el valor absoluto\n",
+        "km = planeta2-planeta1\n",
+        "print(km)\n",
         "\n",
-        "\n",
-        "# Convertir de KM a Millas"
+        "# Convertir de KM a Millas\n",
+        "millas = km * 0.621\n",
+        "print(abs(millas))\n"
       ]
     },
     {
@@ -280,7 +313,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
