--- a/Módulo 6 - Introducción a las listas/Módulo6Katas.ipynb
+++ b/Módulo 6 - Introducción a las listas/Módulo6Katas.ipynb
@@ -27,11 +27,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Existen  8 planetas\n"
+          ]
+        }
+      ],
       "source": [
-        "# Creamos la lista planets y la mostramos"
+        "# Creamos la lista planets y la mostramos\n",
+        "planets = ['Mercury', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Urano', 'Neptuno']\n",
+        "\n",
+        "print('Existen ', len(planets), 'planetas')"
       ]
     },
     {
@@ -43,11 +54,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pluton Es el planeta mas lejos\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agregamos a plutón y mostramos el último elemento"
+        "# Agregamos a plutón y mostramos el último elemento\n",
+        "planets.append('Pluton')\n",
+        "\n",
+        "print(planets[-1], 'Es el planeta mas lejos')"
       ]
     },
     {
@@ -77,12 +99,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Lista de planetas\n",
-        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']"
+        "planets = ['Mercury', 'Venus', 'Tierra', 'Marte', 'Jupiter', 'Saturno', 'Neptuno']\n"
       ]
     },
     {
@@ -96,11 +118,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Solicitamos el nombre de un planeta *Pista:  input()*"
+        "# Solicitamos el nombre de un planeta *Pista:  input()*\n",
+        "planeta = input('escribe el nombre del planeta')"
       ]
     },
     {
@@ -113,11 +136,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Busca el planeta en la lista"
+        "# Busca el planeta en la lista\n",
+        "planet_index = planets.index(planeta)"
       ]
     },
     {
@@ -131,11 +155,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Planetas mas cercanos a Tierra\n",
+            "['Mercury']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más cercanos al sol"
+        "# Muestra los planetas más cercanos al sol\n",
+        "print('Planetas mas cercanos a ' + planeta)\n",
+        "print(planets[0:planet_index])"
       ]
     },
     {
@@ -149,11 +184,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "planetas mas lejanos a Tierra\n",
+            "['Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más lejanos al sol"
+        "# Muestra los planetas más lejanos al sol\n",
+        "print('planetas mas lejanos a ' + planeta)\n",
+        "print(planets[planet_index + 1:])"
       ]
     },
     {
@@ -172,9 +218,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "There are 8 planets\n"
+          ]
+        }
+      ],
       "source": [
         "# Creamos la lista planets y la mostramos\n",
         "\n",
@@ -185,9 +239,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pluto is the last planet\n"
+          ]
+        }
+      ],
       "source": [
         "# Agregamos a plutón y mostramos el último elemento\n",
         "\n",
@@ -205,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -216,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -226,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -237,9 +299,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Here are the planets closer than Venus\n",
+            "['Mercury']\n"
+          ]
+        }
+      ],
       "source": [
         "# Muestra los planetas más cercanos al sol\n",
         "\n",
@@ -249,9 +320,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Here are the planets further than Venus\n",
+            "['Earth', 'Mars', 'Jupiter', 'Saturn', 'Neptune']\n"
+          ]
+        }
+      ],
       "source": [
         "# Muestra los planetas más lejanos al sol\n",
         "\n",
