kata9- ejercicio1-realizado con exito- ejercicio2 incompleto

--- a/Módulo 9 - Funciones/Módulo9Katas.ipynb
+++ b/Módulo 9 - Funciones/Módulo9Katas.ipynb
@@ -29,11 +29,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para leer 3 tanques de combustible y muestre el promedio\n"
+        "# Función para leer 3 tanques de combustible y muestre el promedio\n",
+        "def reporte(t1, t2, t3):\n",
+        "    total = (t1 + t2 + t3) / 3\n",
+        "    return f\"\"\"Reporte completo:\n",
+        "    Total: {total}%\n",
+        "    tanque1: {t2}%\n",
+        "    tanque2: {t2}%\n",
+        "    tanque3: {t3}% \n",
+        "    \"\"\"\n"
       ]
     },
     {
@@ -45,12 +53,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Reporte completo:\n",
+            "    Total: 54.0%\n",
+            "    tanque1: 100%\n",
+            "    tanque2: 100%\n",
+            "    tanque3: 60% \n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "\n",
-        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))"
+        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
+        "print(reporte(2, 100, 60))"
       ]
     },
     {
@@ -62,11 +84,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función promedio "
+        "# Función promedio \n",
+        "def rst(values):\n",
+        "    total = sum(values)\n",
+        "    number_of_items = len(values)\n",
+        "    return total / number_of_items"
       ]
     },
     {
@@ -78,11 +104,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Reporte completo:\n",
+            "    Total: 54.0%\n",
+            "    Tanque1: 2%\n",
+            "    Tanque2: 100%\n",
+            "    Tanque3k: 60% \n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
-        "# Actualiza la función"
+        "# Actualiza la función\n",
+        "# Actualiza la función\n",
+        "def reporte(t1, t2, t3):\n",
+        "    return f\"\"\"Reporte completo:\n",
+        "    Total: {rst([t1, t2, t3])}%\n",
+        "    Tanque1: {t1}%\n",
+        "    Tanque2: {t2}%\n",
+        "    Tanque3k: {t3}% \n",
+        "    \"\"\"\n",
+        "\n",
+        "# Call the updated function again with different values\n",
+        "print(reporte(2,100,60))"
       ]
     },
     {
@@ -109,11 +159,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 65 minutes\n",
+            "    Total fuel left: 500000 gallons\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
-        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno"
+        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
+        "def mission_report(pre_launch_time, flight_time, destination, external_tank, main_tank):\n",
+        "    return f\"\"\"\n",
+        "    Mission to {destination}\n",
+        "    Total travel time: {pre_launch_time + flight_time} minutes\n",
+        "    Total fuel left: {external_tank + main_tank} gallons\n",
+        "    \"\"\"\n",
+        "\n",
+        "print(mission_report(14, 51, \"Moon\", 200000, 300000))"
       ]
     },
     {
@@ -125,11 +195,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 76 minutes\n",
+            "    Total fuel left: 500000\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función de reporte considerando lo anterior"
+        "# Escribe tu nueva función de reporte considerando lo anterior\n",
+        "def mission_report(destination, *minutes, **fuel_reservoirs):\n",
+        "    return f\"\"\"\n",
+        "    Mission to {destination}\n",
+        "    Total travel time: {sum(minutes)} minutes\n",
+        "    Total fuel left: {sum(fuel_reservoirs.values())}\n",
+        "    \"\"\"\n",
+        "\n",
+        "print(mission_report(\"Moon\", 10, 15, 51, main=300000, external=200000))"
       ]
     },
     {
@@ -141,11 +231,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 74 minutes\n",
+            "    Total fuel left: 500000\n",
+            "    main tank --> 300000 gallons left\n",
+            "external tank --> 200000 gallons left\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función"
+        "# Escribe tu nueva función\n",
+        "def mission_report(destination, *minutes, **fuel_reservoirs):\n",
+        "    main_report = f\"\"\"\n",
+        "    Mission to {destination}\n",
+        "    Total travel time: {sum(minutes)} minutes\n",
+        "    Total fuel left: {sum(fuel_reservoirs.values())}\n",
+        "    \"\"\"\n",
+        "    for tank_name, gallons in fuel_reservoirs.items():\n",
+        "        main_report += f\"{tank_name} tank --> {gallons} gallons left\\n\"\n",
+        "    return main_report\n",
+        "\n",
+        "print(mission_report(\"Moon\", 8, 11, 55, main=300000, external=200000))"
       ]
     },
     {
@@ -324,7 +439,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
